@@ -127,7 +127,14 @@ void CImage::copyTo(IImage* target, const core::position2d<s32>& pos)
 		return;
 	}
 
-	Blit(BLITTER_TEXTURE, target, 0, &pos, this, 0, 0);
+	if ( !Blit(BLITTER_TEXTURE, target, 0, &pos, this, 0, 0) 
+		&& target && pos.X == 0 && pos.Y == 0 &&
+		CColorConverter::canConvertFormat(Format, target->getColorFormat()) )
+	{
+		// No fast blitting, but copyToScaling uses other color conversions and might work
+		irr::core::dimension2du dim(target->getDimension());
+		copyToScaling(target->getData(), dim.Width, dim.Height, target->getColorFormat(), target->getPitch());
+	}
 }
 
 
