@@ -432,12 +432,6 @@ void CNullDriver::renameTexture(ITexture* texture, const io::path& newName)
 
 ITexture* CNullDriver::addTexture(const core::dimension2d<u32>& size, const io::path& name, ECOLOR_FORMAT format)
 {
-	if (IImage::isRenderTargetOnlyFormat(format))
-	{
-		os::Printer::log("Could not create ITexture, format only supported for render target textures.", ELL_WARNING);
-		return 0;
-	}
-
 	if (0 == name.size())
 	{
 		os::Printer::log("Could not create ITexture, texture needs to have a non-empty name.", ELL_WARNING);
@@ -530,12 +524,6 @@ ITexture* CNullDriver::addTextureCubemap(const irr::u32 sideLen, const io::path&
 {
 	if ( 0 == sideLen )
 		return 0;
-
-	if (IImage::isRenderTargetOnlyFormat(format))
-	{
-		os::Printer::log("Could not create ITexture, format only supported for render target textures.", ELL_WARNING);
-		return 0;
-	}
 
 	if (0 == name.size())
 	{
@@ -872,13 +860,17 @@ void CNullDriver::draw3DBox(const core::aabbox3d<f32>& box, SColor color)
 
 
 //! draws an 2d image
-void CNullDriver::draw2DImage(const video::ITexture* texture, const core::position2d<s32>& destPos)
+void CNullDriver::draw2DImage(const video::ITexture* texture, const core::position2d<s32>& destPos, bool useAlphaChannelOfTexture)
 {
 	if (!texture)
 		return;
 
 	draw2DImage(texture,destPos, core::rect<s32>(core::position2d<s32>(0,0),
-												core::dimension2di(texture->getOriginalSize())));
+												core::dimension2di(texture->getOriginalSize())),
+												0, 
+												SColor(255,255,255,255), 
+												useAlphaChannelOfTexture
+												);
 }
 
 
@@ -1687,11 +1679,6 @@ IImage* CNullDriver::createImage(ECOLOR_FORMAT format, const core::dimension2d<u
 IImage* CNullDriver::createImage(ECOLOR_FORMAT format, IImage *imageToCopy)
 {
 	os::Printer::log("Deprecated method, please create an empty image instead and use copyTo().", ELL_WARNING);
-	if(IImage::isRenderTargetOnlyFormat(format))
-	{
-		os::Printer::log("Could not create IImage, format only supported for render target textures.", ELL_WARNING);
-		return 0;
-	}
 
 	CImage* tmp = new CImage(format, imageToCopy->getDimension());
 	imageToCopy->copyTo(tmp);
